# agent-cad

./: .env.example  .gitattributes  .gitignore  .npmrc  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/web/app/: BuildDemo.test.tsx  BuildDemo.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/settings/: layout.tsx  page.tsx
apps/web/app/settings/about/: page.tsx
apps/web/app/settings/appearance/: page.tsx
apps/web/app/settings/equipment/: page.tsx
apps/web/app/settings/equipment/[printerId]/: page.tsx
apps/web/app/settings/equipment/[printerId]/filaments/[filamentId]/: page.tsx
apps/web/app/settings/equipment/[printerId]/filaments/[filamentId]/calibrate/[target]/: page.tsx
apps/web/app/settings/storage/: page.tsx
apps/web/app/setup/: page.tsx
apps/web/app/troubleshooting/: data.ts  page.tsx
apps/web/components/: mode-toggle.tsx
apps/web/components/chat/: chat-workspace.tsx  checkpoint-editor.tsx  composer.tsx  message-bubble.tsx  model-selector.tsx  print-settings-panel.tsx  references-tray.tsx  sidebar.tsx  stats-row.tsx  status-badge.tsx  stepper.tsx  working-indicator.tsx
apps/web/components/settings/: calib-context-header.tsx  confirm-dialog.tsx  filament-dialog.tsx  printer-dialog.tsx  section.tsx  settings-form.tsx  settings-nav.tsx
apps/web/components/ui/: dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx  tooltip.tsx
apps/web/components/viewer/: error-boundary.tsx  viewer-clients.tsx  viewer-panel.tsx
apps/web/lib/: api.test.ts  api.ts  chat.test.ts  chat.ts  format.ts
docs/: ARCHITECTURE.md  STACK.md  agent-cad-calibration-spec.md  agent-cad-functional-spec.md  agent-cad-tasking.md  filament-guide.md  orcaslicer-capabilities.md  orcaslicer-settings-ender5s1.md  prerequisites.md  printer-ender5s1.md  research-and-roadmap.md  troubleshooting-cube.md  ui-functional-spec.md
projects/: README.md
projects/benchy/: NOTICE  README.md  print.json
projects/coaster_demo/: model.py  params.json  print.json
projects/fridge_drawer/: model.py  params.json  print.json
scripts/: setup.sh  start.mjs
services/api/: README.md  pyproject.toml
services/api/src/api/: __init__.py  chats.py  descriptor.py  interview.py  jobs.py  logging_setup.py  main.py  projects.py  references.py  registry.py  schemas.py  storage.py  store.py
services/api/tests/: conftest.py  test_api.py  test_api_completion.py  test_chats.py  test_checkpoint_schema.py  test_descriptor.py  test_interview.py  test_jobs.py  test_printers_api.py  test_references.py  test_registry.py  test_respond.py  test_storage.py  test_store.py
services/cad/: README.md  pyproject.toml
services/cad/src/cad/: __init__.py  cli.py  imports.py  printer.py  runner.py  verify.py
services/cad/src/cad/examples/: __init__.py  box_with_holes.py
services/cad/src/cad/generate/: __init__.py  base.py  drivers.py  orchestrator.py  prompt.py
services/cad/src/cad/templates/: __init__.py  box.py  bracket.py  cube.py  plate.py  standoff.py
services/cad/tests/: test_cli.py  test_generate.py  test_imports.py  test_printer.py  test_runner.py  test_templates.py  test_verify.py
services/scan/: README.md  pyproject.toml
services/scan/src/scanner/: __init__.py  cli.py  pipeline.py
services/scan/tests/: test_pipeline.py
services/slice/: README.md  pyproject.toml
services/slice/src/slicer/: __init__.py  cli.py  extract.py  orca.py  orca_presets.py  postprocess.py  prusa.py  result.py  sdcard.py
services/slice/src/slicer/profiles/: __init__.py
services/slice/src/slicer/profiles/ender5s1/: README.md  filament.json  machine.json  process.json
services/slice/tests/: test_ender5s1.py  test_extract.py  test_postprocess.py  test_presets.py  test_slice_info.py
services/slice/tests/fixtures/: .gitattributes
