[project]
name = "apiserver"
version = "0.0.0"
description = "Local FastAPI server fronting the cad/slice/scan services with background jobs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "python-multipart>=0.0.9",  # multipart STL upload (/imports)
    # Workspace services (resolved via [tool.uv.sources] in the root pyproject).
    "cad",
    "slicer",
    "scanner",
]

[project.scripts]
agent-cad-api = "api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
