[project]
name = "cad"
version = "0.0.0"
description = "Headless build123d (B-rep/OCCT) runner: parametric .py -> STL/STEP/3MF + SVG render."
requires-python = ">=3.11"
dependencies = [
    # Primary code-CAD engine: build123d (Pythonic, OCCT B-rep kernel).
    "build123d>=0.7",
    "numpy>=1.26",
    # Mesh-level printability checks (watertight/manifold) on the exported STL.
    "trimesh>=4.4",
]

[project.optional-dependencies]
# Proven fallback engine that shares the OCP/OCCT kernel. Installed on demand.
cadquery = ["cadquery>=2.4"]
# Metered Anthropic API driver for free-text generation. NOT needed for the
# default `claude-code` driver (shells out to the `claude` CLI) or `ollama`
# (stdlib HTTP) — only install when using AGENT_CAD_LLM_DRIVER=anthropic.
anthropic = ["anthropic>=0.40"]

[project.scripts]
cad = "cad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cad"]
